fixed svgs in header contacts(todo: align svgs)

--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -8,11 +8,14 @@
         align-items: center;
     }
 
+    &_link{
+        display: flex;
+
+    }
+
     &_svg{
         margin-right: 10px;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-duration: 250ms;
-        max-height: 16px;
-        max-width: 16px;
+        height: 16px;
+        width: 16px;
     }
 }
