--- a/sass/main.css
+++ b/sass/main.css
@@ -295,12 +295,13 @@ h1 {
   display: flex;
   align-items: center;
 }
+.contacts-list_link {
+  display: flex;
+}
 .contacts-list_svg {
   margin-right: 10px;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
-  max-height: 16px;
-  max-width: 16px;
+  height: 16px;
+  width: 16px;
 }
 
 .logo {
